@@ -201,7 +201,7 @@
         <p>A music player on your browser for local files. Made by itchyny.</p>
         <div class="top">Change log</div>
         <p id="changelog">
-        v1.0 (2010/12/28) <br />Publish <br /> <br />v1.1 (2010/12/30) <br />Add a button to add files from dialog <br />Add buttons to pause, play, and play next/preveous file <br />Add a volume controller <br />Allow you to drop files into the whole window (not only into the drop region) <br />Support for ogg files <br /> <br />v1.2 (2011/01/03) <br />Save and resume volume <br />Delete sidebar area on the left <br />Hide audio tag and add the information area on the current file <br /> <br />v1.3 (2011/01/04) <br />Select and manual sort the file list <br />Delete files from the file list with delete key <br />Add some key binding <br /> <br />v1.4x (2011/01/08-) <br />Move the volume controller on the right <br />Fix the bug on click without ctrl key <br />Sort files by filenames <br />Scroll follows the current selection <br />Select the current file by clicking the filename in the information area <br />Shuffle and Repeat play <br />Support for m4a, aac <br />Fix the style in dragging files <br />Fast rendering on setup <br /> <br />v1.5x (2011/02/06-) <br />Shift + Click <br />Color scheme <br />Keyboard Shortcuts with ? key <br />Infomation on this app with &lt;F1&gt; <br />Global keyboard shortcuts <br />ID3v2 tag reader <br />Property with &lt;Alt+Enter&gt; <br />Support in keyboard shortcuts for Mac users. <br />Filter(Find) with &lt;c-f&gt;. <br /> <br />v1.6x (2011/11/20-) <br />Support for videos (mp4) <br />Music or videos of large size <br />Import from a directory <br />Watch video in full screen with &lt;f&gt; <br />Invert selecting with &lt;c-i&gt; <br /> <br />v2.0 (20?? - ) <br />Source code refined <br />Vim like keybind <br />Add Notification feature <br /> <br /> <br />
+        v1.0 (2010/12/28) <br />Publish <br /> <br />v1.1 (2010/12/30) <br />Add a button to add files from dialog <br />Add buttons to pause, play, and play next/preveous file <br />Add a volume controller <br />Allow you to drop files into the whole window (not only into the drop region) <br />Support for ogg files <br /> <br />v1.2 (2011/01/03) <br />Save and resume volume <br />Delete sidebar area on the left <br />Hide audio tag and add the information area on the current file <br /> <br />v1.3 (2011/01/04) <br />Select and manual sort the file list <br />Delete files from the file list with delete key <br />Add some key binding <br /> <br />v1.4x (2011/01/08-) <br />Move the volume controller on the right <br />Fix the bug on click without ctrl key <br />Sort files by filenames <br />Scroll follows the current selection <br />Select the current file by clicking the filename in the information area <br />Shuffle and Repeat play <br />Support for m4a, aac <br />Fix the style in dragging files <br />Fast rendering on setup <br /> <br />v1.5x (2011/02/06-) <br />Shift + Click <br />Color scheme <br />Keyboard Shortcuts with ? key <br />Infomation on this app with &lt;F1&gt; <br />Global keyboard shortcuts <br />ID3v2 tag reader <br />Property with &lt;Alt+Enter&gt; <br />Support in keyboard shortcuts for Mac users. <br />Filter(Find) with &lt;c-f&gt;. <br /> <br />v1.6x (2011/11/20-) <br />Support for videos (mp4) <br />Music or videos of large size <br />Import from a directory <br />Watch video in full screen with &lt;f&gt; <br />Invert selecting with &lt;c-i&gt; <br /> <br />v2.0 (20?? - ) <br />Source code refined <br />Vim like keybind <br />Add Notification feature <br />Sort properly by track (1 &lt; 2 < 10, rather than &quot;1&quot; < &quot;10&quot; < &quot;2&quot;) <br /> <br /> <br />
         </p>
       </div>
       <div id="filter">
